sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:9: error: value || is not a member of Int
      if(ecart=9 || ecart=10){
                 ^AlgCombSort11:9: error: type mismatch;
 found   : Unit
 required: Boolean
      if(ecart=9 || ecart=10){
              ^